Put overflow-y:auto in all modals to allow scrolling in chrome. See  https://stackoverflow.com/questions/28077066/bootstrap-modal-issue-scrolling-gets-disabled

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -782,15 +782,19 @@ ul.social-buttons li a:active {
     background-clip: border-box;
     -webkit-box-shadow: none;
     box-shadow: none;
+    overflow-y:auto;
+}
 }
 
 .portfolio-modal .modal-content h2 {
     margin-bottom: 15px;
     font-size: 3em;
+    overflow-y:auto;
 }
 
 .portfolio-modal .modal-content p {
     margin-bottom: 30px;
+    overflow-y:auto;
 }
 
 .portfolio-modal .modal-content p.item-intro {
@@ -798,15 +802,18 @@ ul.social-buttons li a:active {
     font-family: {{ site.data.template.font.secondary }};
     font-size: 16px;
     font-style: italic;
+    overflow-y:auto;
 }
 
 .portfolio-modal .modal-content ul.list-inline {
     margin-top: 0;
     margin-bottom: 30px;
+    overflow-y:auto;
 }
 
 .portfolio-modal .modal-content img {
     margin-bottom: 30px;
+    overflow-y:auto;
 }
 
 .portfolio-modal .close-modal {
@@ -817,10 +824,12 @@ ul.social-buttons li a:active {
     height: 75px;
     background-color: transparent;
     cursor: pointer;
+    overflow-y:auto;
 }
 
 .portfolio-modal .close-modal:hover {
     opacity: .3;
+    overflow-y:auto;
 }
 
 .portfolio-modal .close-modal .lr {
@@ -832,6 +841,7 @@ ul.social-buttons li a:active {
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
+    overflow-y:auto;
 }
 
 .portfolio-modal .close-modal .lr .rl {
@@ -842,6 +852,7 @@ ul.social-buttons li a:active {
     -webkit-transform: rotate(90deg);
     -ms-transform: rotate(90deg);
     transform: rotate(90deg);
+    overflow-y:auto;
 }
 
 ::-moz-selection {
